# SOP_Angle_And_Area_Smoothing

./: CMakeLists.txt  README.md
src/: SOP_Angle_And_Area_Smoothing.cpp  SOP_Angle_And_Area_Smoothing.hpp  SOP_Angle_And_Area_Smoothing_Info.hpp  SOP_Angle_And_Area_Smoothing_Verb.hpp
